--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMNqqhb3PU4S7-SHx9BbAZk-wUqHsHIlo&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMNqqhb3PU4S7-SHx9BbAZk-wUqHsHIlo&callback=initMap&libraries=places">
     </script>
-       <script src="script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
